--- a/app/src/main/res/layout/add_property_fragment.xml
+++ b/app/src/main/res/layout/add_property_fragment.xml
@@ -25,6 +25,7 @@
         tools:context=".presentation.ui.addProperty.AddPropertyFragment">
 
         <androidx.core.widget.NestedScrollView
+            android:id="@+id/nestedScrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="60dp">
@@ -40,7 +41,6 @@
                     android:layout_marginStart="@dimen/marginStart"
                     android:text="@string/property_type"
                     android:textStyle="bold"
-                    app:layout_constraintBaseline_toBaselineOf="@id/type_input_layout"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,7 +51,6 @@
                     android:layout_marginStart="@dimen/marginStart"
                     android:text="@string/address"
                     android:textStyle="bold"
-                    app:layout_constraintBaseline_toBaselineOf="@id/address_text_input"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/textViewType" />
 
@@ -62,7 +61,6 @@
                     android:layout_marginStart="@dimen/marginStart"
                     android:text="@string/address"
                     android:textStyle="bold"
-                    app:layout_constraintBaseline_toBaselineOf="@id/description_text_input"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/textViewType" />
 
@@ -73,7 +71,6 @@
                     android:layout_marginStart="@dimen/marginStart"
                     android:text="@string/price"
                     android:textStyle="bold"
-                    app:layout_constraintBaseline_toBaselineOf="@id/price_text_input"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/textViewDescription" />
 
@@ -84,212 +81,39 @@
                     android:layout_marginStart="@dimen/marginStart"
                     android:text="@string/characteristics"
                     android:textStyle="bold"
-                    app:layout_constraintBaseline_toBaselineOf="@id/surface_text_input"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/textViewType" />
 
-                <androidx.constraintlayout.widget.Barrier
-                    android:id="@+id/barrier"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:barrierDirection="start"
-                    app:constraint_referenced_ids="type_input_layout,address_text_input, description_text_input,price_text_input, surface_text_input" />
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/type_input_layout"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
-                    android:layout_width="@dimen/formWidth"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/marginStart"
-                    android:layout_marginTop="@dimen/marginTop"
-                    android:layout_marginEnd="@dimen/marginEnd"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/barrier"
+                <include
+                    android:id="@+id/type"
+
+                    layout="@layout/type_layout"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_goneMarginEnd="@dimen/marginEnd">
+                    app:layout_goneMarginEnd="@dimen/marginEnd"
+                    app:property="@{property}" />
 
-                    <AutoCompleteTextView
-                        android:id="@+id/type_dropdown"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/select_a_property_type"
-                        android:inputType="textAutoComplete"
-                        android:labelFor="@id/type_input_layout"
-                        android:text="@{property.type.toString()}" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/address_text_input"
-                    android:layout_width="@dimen/formWidth"
+                <include
+                    android:id="@+id/address"
+                    layout="@layout/address_layout"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/marginStart"
-                    android:layout_marginTop="@dimen/marginTop"
-                    android:hint="@string/address"
-                    android:inputType="textPostalAddress"
-                    android:text="@={property.address1}"
-                    android:textSize="@dimen/textSize"
-                    app:endIconMode="clear_text"
-                    app:layout_constraintStart_toEndOf="@id/barrier"
-                    app:layout_constraintTop_toBottomOf="@id/type_input_layout" />
+                    android:layout_width="match_parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/type"
+                    app:layout_goneMarginEnd="@dimen/marginEnd"
+                    app:property="@{property}" />
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/address2_text_input"
-                    android:layout_width="@dimen/formWidth"
+                <include
+                    android:id="@+id/characteristics"
+                    layout="@layout/characteristics_layout"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/marginStart"
-                    android:layout_marginTop="@dimen/marginTop"
-                    android:hint="@string/address2"
-                    android:inputType="textPostalAddress"
-                    android:text="@{property.address2}"
-                    android:textSize="@dimen/textSize"
-                    app:endIconMode="clear_text"
-                    app:layout_constraintStart_toEndOf="@id/barrier"
-                    app:layout_constraintTop_toBottomOf="@id/address_text_input" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/address"
+                    app:layout_goneMarginEnd="@dimen/marginEnd"
+                    app:property="@{property}" />
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/city_text_input"
-                    android:layout_width="@dimen/formWidth"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/marginStart"
-                    android:layout_marginTop="@dimen/marginTop"
-                    android:hint="@string/city"
-                    android:inputType="text"
-                    android:text="@{property.city}"
-                    android:textSize="@dimen/textSize"
-                    app:endIconMode="clear_text"
-                    app:layout_constraintStart_toEndOf="@id/barrier"
-                    app:layout_constraintTop_toBottomOf="@id/address2_text_input" />
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/state_text_input"
-                    android:layout_width="110dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/marginStart"
-                    android:layout_marginTop="@dimen/marginTop"
-                    android:hint="@string/state"
-                    android:inputType="textPostalAddress"
-                    android:text="@={property.state}"
-                    android:textSize="@dimen/textSize"
-                    app:endIconMode="clear_text"
-                    app:layout_constraintStart_toEndOf="@id/barrier"
-                    app:layout_constraintTop_toBottomOf="@id/city_text_input" />
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/country_text_input"
-                    android:layout_width="@dimen/formWidth"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/marginStart"
-                    android:layout_marginTop="@dimen/marginTop"
-                    android:hint="@string/country"
-                    android:inputType="text"
-                    android:text="@string/united_state"
-                    android:textSize="@dimen/textSize"
-                    app:endIconMode="clear_text"
-                    app:layout_constraintStart_toEndOf="@id/barrier"
-                    app:layout_constraintTop_toBottomOf="@id/state_text_input" />
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/description_text_input"
-                    android:layout_width="@dimen/formWidth"
-                    android:layout_height="200dp"
-                    android:layout_marginStart="@dimen/marginStart"
-                    android:layout_marginTop="@dimen/marginTop"
-                    android:hint="@string/description"
-                    android:inputType="text"
-                    android:maxLength="512"
-                    android:text="@={property.description}"
-                    android:textSize="@dimen/textSize"
-                    app:endIconMode="clear_text"
-                    app:layout_constraintStart_toEndOf="@id/barrier"
-                    app:layout_constraintTop_toBottomOf="@id/country_text_input" />
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/zipcode_text_input"
-                    android:layout_width="110dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/marginStart"
-                    android:layout_marginTop="@dimen/marginTop"
-                    android:hint="@string/zipcode"
-                    android:inputType="number"
-                    android:text="@{String.valueOf(property.zipCode)}"
-                    android:textSize="@dimen/textSize"
-                    app:endIconMode="clear_text"
-                    app:layout_constraintStart_toEndOf="@id/state_text_input"
-                    app:layout_constraintTop_toBottomOf="@id/city_text_input" />
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/price_text_input"
-                    android:layout_width="@dimen/formWidth"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/marginStart"
-                    android:layout_marginTop="@dimen/marginTop"
-                    android:hint="@string/price"
-                    android:text="@{String.valueOf(property.price)}"
-                    android:textSize="@dimen/textSize"
-                    app:endIconMode="clear_text"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/barrier"
-                    app:layout_constraintTop_toBottomOf="@id/description_text_input" />
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/surface_text_input"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/marginStart"
-                    android:layout_marginTop="@dimen/marginTop"
-                    android:hint="@string/surface"
-                    android:inputType="number"
-                    android:maxLength="2"
-                    android:text="@{String.valueOf(property.surface)}"
-                    android:textSize="@dimen/textSize"
-                    app:endIconMode="clear_text"
-                    app:layout_constraintStart_toStartOf="@id/barrier"
-                    app:layout_constraintTop_toBottomOf="@id/price_text_input" />
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/number_of_room_text_input"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/marginStart"
-                    android:layout_marginTop="@dimen/marginTop"
-                    android:hint="@string/rooms"
-                    android:inputType="number"
-                    android:text="@{String.valueOf(property.roomNumber)}"
-                    android:textSize="@dimen/textSize"
-                    app:endIconMode="clear_text"
-                    app:layout_constraintStart_toEndOf="@id/surface_text_input"
-                    app:layout_constraintTop_toBottomOf="@id/price_text_input" />
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/number_of_bedroom_text_input"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/marginStart"
-                    android:layout_marginTop="@dimen/marginTop"
-                    android:hint="@string/bedrooms"
-                    android:text="@{String.valueOf(property.bedroomNumber)}"
-                    android:textSize="@dimen/textSize"
-                    app:endIconMode="clear_text"
-                    android:inputType="number"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/surface_text_input"
-                    app:layout_constraintTop_toBottomOf="@id/price_text_input" />
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/number_of_bathroom_text_input"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/marginStart"
-                    android:layout_marginTop="@dimen/marginTop"
-                    android:hint="@string/bathroom"
-                    android:inputType="number"
-                    android:text="@{String.valueOf(property.bathroomNumber)}"
-                    android:textSize="@dimen/textSize"
-                    app:endIconMode="clear_text"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/number_of_bedroom_text_input"
-                    app:layout_constraintTop_toBottomOf="@id/price_text_input" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
