--- a/app/src/main/res/layout/media_layout.xml
+++ b/app/src/main/res/layout/media_layout.xml
@@ -25,27 +25,26 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button_camera"
+            app:layout_constraintTop_toBottomOf="@+id/button_photo"
             tools:listitem="@layout/media_item_content" />
 
         <Button
-            android:id="@+id/button_camera"
+            android:id="@+id/button_photo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/camera_upload"
-            app:layout_constraintEnd_toStartOf="@+id/button_phone"
+            android:text="@string/upload_photo"
+            app:layout_constraintEnd_toStartOf="@+id/button_video"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/button_phone"
+            android:id="@+id/button_video"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:onClick="@"
-            android:text="@string/phone_upload"
+            android:text="@string/upload_video"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/button_camera"
+            app:layout_constraintStart_toEndOf="@+id/button_photo"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
