--- a/app/src/main/res/layout/media_item_content.xml
+++ b/app/src/main/res/layout/media_item_content.xml
@@ -26,7 +26,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:scaleType="centerCrop"
-                app:bindImage="@{photo.photoPath}"
+                app:imageUrl="@{photo.photoPath}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/mediaTitle_EditText"
                 app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="16dp"
                 android:hint="Media title"
-                android:text="@{photo.name}"
+                android:text="@{photo.name.toString()}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/media_imageView"
