--- a/app/src/main/res/layout/media_layout.xml
+++ b/app/src/main/res/layout/media_layout.xml
@@ -23,6 +23,7 @@
             android:id="@+id/photo_recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            tools:layoutManager="LinearLayoutManager"
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button_photo"
