- update PhotosAdapter.kt for databinding value
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout-sw600dp/add_property_fragment.xml
+++ b/app/src/main/res/layout-sw600dp/add_property_fragment.xml
@@ -15,6 +15,10 @@
             type="com.openclassrooms.realestatemanager.domain.model.property.Property" />
 
         <variable
+            name="photo"
+            type="com.openclassrooms.realestatemanager.domain.model.property.Media.Photo" />
+
+        <variable
             name="viewModel"
             type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddPropertyViewModel" />
     </data>
