--- a/app/src/main/res/layout-land/add_property_fragment.xml
+++ b/app/src/main/res/layout-land/add_property_fragment.xml
@@ -11,6 +11,10 @@
             type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddPropertyFragment.Handlers" />
 
         <variable
+            name="photo"
+            type="com.openclassrooms.realestatemanager.domain.model.property.Media.Photo" />
+
+        <variable
             name="property"
             type="com.openclassrooms.realestatemanager.domain.model.property.Property" />
     </data>
