--- a/app/src/main/res/layout/add_property_fragment.xml
+++ b/app/src/main/res/layout/add_property_fragment.xml
@@ -15,6 +15,10 @@
             type="com.openclassrooms.realestatemanager.domain.model.property.Property" />
 
         <variable
+            name="photo"
+            type="com.openclassrooms.realestatemanager.domain.model.property.Media.Photo" />
+
+        <variable
             name="viewModel"
             type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddPropertyViewModel" />
     </data>
@@ -97,8 +101,8 @@
                 <include
                     android:id="@+id/address"
                     layout="@layout/address_layout"
-                    android:layout_height="wrap_content"
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/type"
                     app:layout_goneMarginEnd="@dimen/marginEnd"
@@ -133,7 +137,7 @@
                     app:layout_constraintTop_toBottomOf="@id/point_of_interest"
                     app:layout_goneMarginEnd="@dimen/marginEnd"
                     app:property="@{property}"
-                   />
+                    app:photo="@{photo}" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
