--- a/app/src/main/res/layout/media_item_content.xml
+++ b/app/src/main/res/layout/media_item_content.xml
@@ -25,7 +25,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:scaleType="centerCrop"
-                app:imageUrl="@{photo.photoPath}"
+                app:imagePath="@{photo.photoPath}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/mediaTitle_EditText"
                 app:layout_constraintStart_toStartOf="parent"
