--- a/app/src/main/res/layout/media_layout.xml
+++ b/app/src/main/res/layout/media_layout.xml
@@ -13,6 +13,10 @@
             name="viewModel"
             type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddPropertyViewModel" />
 
+        <variable
+            name="photo"
+            type="com.openclassrooms.realestatemanager.domain.model.property.Media.Photo" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -22,11 +26,12 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/photo_recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:layoutManager="LinearLayoutManager"
+            android:layout_height="500dp"
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button_photo"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:layoutManager="LinearLayoutManager"
             tools:listitem="@layout/media_item_content" />
 
         <Button
