- update AddPropertyFragment.kt: add propertyId Argument
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -42,6 +42,10 @@
         <action
             android:id="@+id/action_addPropertyFragment_to_photoOptionDialogFragment"
             app:destination="@id/photoOptionDialogFragment" />
+        <argument
+            android:name="propertyId"
+            android:defaultValue="0L"
+            app:argType="long" />
     </fragment>
     <fragment
         android:id="@+id/mapFragment"
