--- a/app/src/main/res/layout/address_layout.xml
+++ b/app/src/main/res/layout/address_layout.xml
@@ -99,5 +99,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/state_text_input" />
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/area_text_input"
+            android:layout_width="@dimen/formWidth"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/marginStart"
+            android:layout_marginTop="@dimen/marginTop"
+            android:hint="@string/area"
+            android:inputType="text"
+            android:textSize="@dimen/textSize"
+            app:endIconMode="clear_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/country_text_input" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
